# ros-ROS-car

./: README.md  wiring_Instructions.txt  workspace_Instructions.txt
devel/: .catkin  _setup_util.py
devel/include/ultralytics_ros/: YoloResult.h
devel/include/waterplus_map_tools/: AddNewWaypointRequest.h  AddNewWaypointResponse.h  GetChargerByNameRequest.h  GetChargerByNameResponse.h  GetNumOfWaypointsResponse.h  GetWaypointByIndexRequest.h  GetWaypointByIndexResponse.h  GetWaypointByNameRequest.h  GetWaypointByNameResponse.h  SaveWaypointsRequest.h  Waypoint.h
devel/include/yolo11_run/: detection_result.h
devel/lib/car_camera/: image_follow_center  image_follow_depth  image_recognize_hsv  image_sub
devel/lib/pkgconfig/: car_camera.pc  imu_ros1_device.pc  navigation_pkg.pc  ros_arduino_firmware.pc  ros_arduino_msgs.pc  ros_arduino_python.pc  ros_arduino_python_back.pc  sherpa_onnx_ros.pc  ultralytics_ros.pc  urdf_pkg.pc  voice_pkg.pc  waterplus_map_tools.pc  yolo11_run.pc
devel/lib/voice_pkg/: asr.py  asr_test.py  tts.py
devel/lib/waterplus_map_tools/: charger_get_position  wp_manager  wp_nav_odom_report  wp_saver
install/: .rosinstall  setup.sh
install/include/yolo11_run/: humanoid_result.h
install/lib/pkgconfig/: navigation_pkg.pc  ros_arduino_python.pc  urdf_pkg.pc  yolo11_run.pc
install/lib/sherpa_onnx_ros/: asr.py  tts.py
install/share/sherpa_onnx_ros/: package.xml
src/car_camera/: CMakeLists.txt  package.xml
src/car_camera/config/: gesture.rviz  ost.yaml  start.rviz
src/car_camera/launch/: camer_start.launch  yolo_start.launch
src/car_camera/src/: image_follow_center.cpp  image_follow_depth.cpp  image_recognize_hsv.cpp  image_sub.cpp  image_view.cpp
src/imu_ros1_device/: CMakeLists.txt  package.xml
src/imu_ros1_device/config/: imu_filter_param.yaml
src/imu_ros1_device/launch/: ybimu_display.launch
src/imu_ros1_device/rviz/: ybimu.rviz
src/imu_ros1_device/scripts/: ybimu_driver.py
src/navigation_pkg/: CMakeLists.txt
src/navigation_pkg/config/: nav.rviz  slam.rviz
src/ultralytics_ros-noetic-devel/: CMakeLists.txt
src/urdf_pkg/: CMakeLists.txt  package.xml
src/voice_pkg/: CMakeLists.txt  package.xml
src/yolo11_run/: CMakeLists.txt  package.xml
src/yolo11_run/include/yolo11_run/: yolo11.h
src/yolo11_run/launch/: gesture_recognize.launch  humanoid_recognize.launch
src/yolo11_run/model/gesture_result/: best_pnnx.ncnn.param
src/yolo11_run/model/humanoid_result/: humanoid_pnnx.py.ncnn.param
src/yolo11_run/msg/: detection_result.msg  humanoid_result.msg
src/yolo11_run/src/: gesture_recognize.cpp  gesture_recognize_drive.cpp  humanoid_recognize.cpp  humanoid_tracking_drive.cpp  yolo11_gesture.cpp  yolo11_humanoid.cpp
(+129 files in other folders)
